fix list icon blurring, and firefox spreadsheet tab option icon dropping off to second line

--- a/app/assets/volume/spreadsheet.styl
+++ b/app/assets/volume/spreadsheet.styl
@@ -60,12 +60,17 @@
       &:hover
         opacity 0.7
 
+    .spreadsheet-tab-name
+      margin 0 20px
+
     .spreadsheet-tab-options-icon
-      background-position 100% 2px
-      float right
-      cursor pointer
-      height f1+f8
+      background-position center
       background-size 85%
+      cursor pointer
+      position absolute
+      right 0px
+      margin b8
+
 
   td.add
     color pale
@@ -224,19 +229,21 @@
 .top-level-materials
   font-style oblique
   color #999
-
+  
 .spreadsheet-tab-options
   right 0
 .spreadsheet-tab-option
   text-align justify
   text-transform none
+  font-weight normal
   padding b8 b3
   cursor pointer
 .spreadsheet-tab-option > .icon
   margin-right b3
-  vertical-align text-top
-  line-height b23
-  height b1
+  line-height b1
+  vertical-align middle
+  height b23
+  width b23
 .spreadsheet-tab-option:hover
   background-color yellow51
   
